Added Background Video.

--- a/widget/spotify-widget.html
+++ b/widget/spotify-widget.html
@@ -12,6 +12,13 @@
         <section></section>
     </article>
 </main>
+
+<video width="320" height="240" controls>
+    <source src="E:\apps\streamlabs\Overlays\Programming Mode\Live\Coding Background.webm
+" type="video/webm">
+    Seu navegador não suporta vídeos em WebM.
+</video>
+
 <button onclick="tocandoAgora()">O que está tocando agora?</button>
 <script src="spotify-widget.js"></script>
 </body>
