--- a/examples/naushikha-widget/player.min.html
+++ b/examples/naushikha-widget/player.min.html
@@ -34,36 +34,37 @@
 
 <script>
     var songData, progressSeconds, totalSeconds, progressInterval,
-    serviceHost = "https://spotify.naush.workers.dev", spotifyUser = "Naushikha";
+        serviceHost = "https://spotify.naush.workers.dev", spotifyUser = "Naushikha";
 
-function updatePlayer() {
-    fetch(`${serviceHost}/get-now-playing`).then(e => e.json()).then(e => {
-        if (e.hasOwnProperty("ERROR"))
-            return document.getElementById("player-song").innerHTML = `${spotifyUser} isn't playing anything.`,
-                void (document.getElementById("player-artist").innerHTML = "  ");
-        songData = e,
-            document.getElementById(
-                "player-song").innerHTML = e.item.name, document.getElementById(
-                    "player-artist").innerHTML = e.item.artists[0].name, document.getElementById(
-                        "player-status").innerHTML = e.is_playing ? `▶️ ${spotifyUser}'s now playing...` : `⏸ ${spotifyUser} has paused.`, document.getElementById(
-                            "player-album-art").setAttribute(
-                                "src", e.item.album.images[1].url),
-            document.getElementById("player-progress").setAttribute("style",
+    function updatePlayer() {
+        fetch(`${serviceHost}/get-now-playing`).then(e => e.json()).then(e => {
+            if (e.hasOwnProperty("ERROR"))
+                return document.getElementById("player-song").innerHTML = `${spotifyUser} isn't playing anything.`,
+                    void (document.getElementById("player-artist").innerHTML = "  ");
+            songData = e,
                 document.getElementById(
-                    "player-progress").getAttribute("style") + `width: ${100 * e.progress_ms / e.item.duration_ms}%`),
-            document.getElementById("player-background").style.backgroundImage = `url(${e.item.album.images[1].url})`,
-            document.getElementById("player-song-link").setAttribute("href", e.item.external_urls.spotify), d
-        ocument.getElementById("player-artist-link").setAttribute("href", e.item.artists[0].external_urls.spotify), d
-        ocument.getElementById("player-album-link").setAttribute("href", e.item.album.external_urls.spotify),
-            document.getElementById(
-                "player-mp3-link").setAttribute("href", e.item.preview_url),
-        null == e.item.preview_url && document.getElementById("player-mp3-link").setAttribute(
-            "style", "display: none;"), progressSeconds = Math.ceil(songData.progress_ms / 1e3),
-            totalSeconds = Math.ceil(
-                songData.item.duration_ms / 1e3), songData.is_playing ? progressInterval = setInterval(
-                    setProgress, 1e3) : setProgress(),
-        document.getElementById("" +
-            "player").clientWidth < 410 && (
+                    "player-song").innerHTML = e.item.name, document.getElementById(
+                "player-artist").innerHTML = e.item.artists[0].name, document.getElementById(
+                "player-status").innerHTML = e.is_playing ? `▶️ ${spotifyUser}'s now playing...` : `⏸ ${
+                spotifyUser} has paused.`, document.getElementById(
+                "player-album-art").setAttribute(
+                "src", e.item.album.images[1].url),
+                document.getElementById("player-progress").setAttribute("style",
+                    document.getElementById(
+                        "player-progress").getAttribute("style") + `width: ${100 * e.progress_ms / e.item.duration_ms}%`),
+                document.getElementById("player-background").style.backgroundImage = `url(${e.item.album.images[2].url})`,
+                document.getElementById("player-song-link").setAttribute("href", e.item.external_urls.spotify), d
+            ocument.getElementById("player-artist-link").setAttribute("href", e.item.artists[0].external_urls.spotify), d
+            ocument.getElementById("player-album-link").setAttribute("href", e.item.album.external_urls.spotify),
+                document.getElementById(
+                    "player-mp3-link").setAttribute("href", e.item.preview_url),
+            null == e.item.preview_url && document.getElementById("player-mp3-link").setAttribute(
+                "style", "display: none;"), progressSeconds = Math.ceil(songData.progress_ms / 1e3),
+                totalSeconds = Math.ceil(
+                    songData.item.duration_ms / 1e3), songData.is_playing ? progressInterval = setInterval(
+                setProgress, 1e3) : setProgress(),
+            document.getElementById("" +
+                "player").clientWidth < 410 && (
                 document.getElementById("" +
                     "player-song-link").style.display = "none",
                     document.getElementById(
@@ -73,20 +74,20 @@ function updatePlayer() {
                     document.getElementById(
                         "player-mp3-link").style.display = "none",
                     document.getElementById("player-time").style.display = "none")
-    })
-}
+        })
+    }
 
-function setProgress() {
-    if (progressSeconds > totalSeconds) return clearInterval(progressInterval), void updatePlayer();
-    ++progressSeconds;
-    var e = pad(parseInt(totalSeconds / 60)) + ":" + pad(totalSeconds % 60),
-        t = pad(parseInt(progressSeconds / 60)) + ":" + pad(progressSeconds % 60);
-    document.getElementById("player-time").innerHTML = t + " / " + e, document.getElementById("player-progress").style.width = `${100 * progressSeconds / totalSeconds}%`
-}
+    function setProgress() {
+        if (progressSeconds > totalSeconds) return clearInterval(progressInterval), void updatePlayer();
+        ++progressSeconds;
+        var e = pad(parseInt(totalSeconds / 60)) + ":" + pad(totalSeconds % 60),
+            t = pad(parseInt(progressSeconds / 60)) + ":" + pad(progressSeconds % 60);
+        document.getElementById("player-time").innerHTML = t + " / " + e, document.getElementById("player-progress").style.width = `${100 * progressSeconds / totalSeconds}%`
+    }
 
-function pad(e) {
-    var t = e + "";
-    return t.length < 2 ? "0" + t : t
-}
+    function pad(e) {
+        var t = e + "";
+        return t.length < 2 ? "0" + t : t
+    }
 
-updatePlayer();</script>
+    updatePlayer();</script>
