Barra de Progresso e Título. (Dark Player)

--- a/widgets/simple-dark/player.html
+++ b/widgets/simple-dark/player.html
@@ -34,14 +34,15 @@
         </div>
     </main>
     <footer>
-        <div class="title">The Vines - Ride
-        </div>
+        <div class="title"></div>
         <div class="time-tracker">
             <div class="timer">
                 <div class="bg">
+                    <!-- Elemento para animar a barra de progresso. -->
+                    <div class="progress-bar"></div>
                 </div>
             </div>
-            <div class="time">00:80</div>
+            <div class="time">01:00</div>
         </div>
     </footer>
 </div>
