--- a/widgets/simple-dark/player.html
+++ b/widgets/simple-dark/player.html
@@ -23,7 +23,7 @@
     </header>
     <main>
         <div class="album-art">
-            <img src="https://upload.wikimedia.org/wikipedia/en/0/00/TheVines_WinningDays.jpg" alt=""/>
+            <img class="album-img" src="" alt=""/>
         </div>
         <div class="player">
             <i class="fa fa-repeat"></i>
@@ -42,7 +42,7 @@
                     <div class="progress-bar"></div>
                 </div>
             </div>
-            <div class="time">01:00</div>
+            <div class="time"></div>
         </div>
     </footer>
 </div>
